--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <script src="resources/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="resources/bower_components/angular/angular.min.js"></script>
         <script src="resources/bower_components/typed.js/dist/typed.min.js"></script>
+        <script src="resources/bower_components/aws-sdk/dist/aws-sdk.min.js"></script>
         <script src="resources/javascript/app.js"></script>
     </head>
     <body>
@@ -22,15 +23,11 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-xs-2 col-sm-4 col-md-6 hidden-sm-down">
+                        <div class="col-6 col-sm-4 col-md-6">
                             <span class="logo"></span>
                         </div>
 
-                        <div class="col-4 hidden-sm-up">
-                            <button><i class="fa fa-bars" aria-hidden="true"></i></button>
-                        </div>
-
-                        <div class="col-8 col-sm-12 col-md-6">
+                        <div class="col-6 col-sm-8 col-md-6">
                             <a class="link github" href="https://github.com/AceXintense" target="_blank">Github <i class="fa fa-github" aria-hidden="true"></i></a>
                         </div>
 
@@ -42,18 +39,33 @@
                 <div class="container">
 
                     <div class="header-info">
-                        <h1>I'm a <span>Developer</span></h1>
-                        <p>What skills are you looking for?</p>
+                        <div class="hidden-sm-down">
+                            <h1>I'm a <span>Developer</span></h1>
+                        </div>
 
-                        <div class="grop">
-                            <input type="text" placeholder="PHP, MySQL, Postgres, HTML..." ng-model="search" ng-keypress="enterToSearch($event)">
+                        <div class="hidden-md-up">
+                            <h1>I'm a</h1>
+                            <span>Developer</span>
+                        </div>
+                        <p>What {{searchType}} are you looking for?</p>
+
+                        <div class="group">
+                            <select class="search-select" ng-model="searchType" autocomplete="off">
+                                <option value="skills">Skills</option>
+                                <option value="projects">Projects</option>
+                                <option value="galleries">Galleries</option>
+                            </select>
+                            <input type="text" placeholder="{{searchTypeHelpers[searchType]}}" ng-model="search" ng-keypress="enterToSearch($event)">
                             <button ng-click="searchFor(search)" class="hidden-sm-down"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
 
                             <div class="search-results" ng-show="results.length > 0">
                                 <div class="result" ng-repeat="result in results">
-                                    <a ng-click="scrollToId(result.id)">{{result.language}}</a>
+                                    <a ng-click="scrollToId(result.id) + clearSearch()">{{result.title}}</a>
                                 </div>
                             </div>
+
+                            <button class="clear-search" ng-show="results.length > 0">Clear Search</button>
+
                         </div>
 
                     </div>
@@ -106,20 +118,19 @@
                     <div class="group" ng-show="isTabSelected(1)">
 
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-10">
                                 <button ng-repeat="filter in filters" ng-click="getRepository(filter.searchName) + setSelectedFilter(filter.title)" ng-class="selectedFilter == filter.title ? 'selected' : ''" class="filter">{{filter.title}}</button>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-sm-2">
                                 <p id="repository-count">{{repositoryCurrentCount}}/{{repositoryCount}}</p>
                             </div>
                         </div>
 
                         <div class="projects-group">
-
                             <div class="row">
                                 <div class="spacer col-sm-6 col-lg-4" ng-repeat="project in projects">
-                                    <div class="card">
+                                    <div class="card" id="p-{{project.name}}">
                                         <p class="language">{{project.language}}</p>
                                         <h1>{{project.name}}</h1>
                                         <p>{{project.description}}</p>
@@ -127,9 +138,40 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
+
                     </div>
+
+                    <div class="group" ng-show="isTabSelected(2)">
+
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="gallery-row" ng-repeat="item in galleries">
+                                    <div class="gallery-description" id="g-{{item.name}}">
+                                        <h1>{{item.name}}</h1>
+                                        <p>{{item.description}}</p>
+                                        <a class="button" href="{{item.githubURL}}" ng-show="item.github" target="_blank">View on Github</a>
+                                    </div>
+                                    <div class="gallery-content">
+                                        <div class="row">
+                                            <div class="col-6" ng-repeat="gallery in item.objects">
+                                                <div class="picture" style="background-image: url({{gallery.pictureURL}});"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 gallery-navigation">
+                                <h1>Jump to Gallery</h1>
+                                <button ng-repeat="item in galleries" ng-click="scrollToId('g-' + item.name, 2)">
+                                    {{item.name}}
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
 
