Added bold statments to allow content to pop on the page.

--- a/public/index.html
+++ b/public/index.html
@@ -92,10 +92,10 @@
                             <div class="col-md-8">
                                 <h1>About Me</h1>
                                 <p>
-                                    Hello my name is Sam! I am 19 and I strive to develop stable and advanced systems in PHP. I am a Software engineer at Glide Utilities.
+                                    Hello my name is <b>Sam!</b> I am 19 and I strive to develop stable and advanced systems in PHP. I am a <b>Software engineer</b> at Glide Utilities.
                                 </p>
                                 <p>
-                                    My main skills are PHP, HTML, CSS, Angular JS most of my applications are written in PHP using Laravel 5+ as the standard framework. I enjoy engineering systems that automate general processes.
+                                    My main skills are <b>PHP</b>, <b>HTML</b>, <b>CSS</b>, <b>Angular JS</b> most of my applications are written in PHP using <b>Laravel 5+</b> as the standard framework. I enjoy engineering systems that automate general processes.
                                 </p>
                                 <p>
                                     Currently the work I do is update a piece of PHP software by adding new features and deprecating old and unused code.
