--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
         <div ng-controller="PortfolioController">
 
-            <div class="image-mask" ng-show="previewWindow">
+            <div class="image-mask" ng-show="previewWindow" ng-cloak>
                 <div class="image" style="background-image: url({{previewURL}});">
                     <button ng-click="closePreviewer()"><i class="fa fa-times" aria-hidden="true"></i></button>
 
@@ -75,11 +75,11 @@
                             <input type="text" placeholder="{{searchTypeHelpers[searchType]}}" ng-model="search" ng-keypress="enterToSearch($event); searchFor(search)">
 
                             <div class="search-group">
-                                <div class="search-results" ng-show="results.length > 0">
+                                <div class="search-results" ng-show="results.length > 0" ng-cloak>
                                     <div class="result" ng-repeat="result in results">
                                         <a ng-click="scrollToId(result.id); clearSearch();">{{result.title}}</a>
                                     </div>
-                                    <button class="clear-search" ng-click="clearSearch()" ng-show="results.length > 0">Clear Search</button>
+                                    <button class="clear-search" ng-click="clearSearch()" ng-show="results.length > 0" ng-cloak>Clear Search</button>
                                 </div>
 
                             </div>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
 
-                    <div class="group" ng-show="isTabSelected(0)">
+                    <div class="group" ng-show="isTabSelected(0)" ng-cloak>
                         <div class="row">
 
                             <div class="spacer col-sm-6 col-lg-4" ng-repeat="skill in skills">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="group" ng-show="isTabSelected(1)">
+                    <div class="group" ng-show="isTabSelected(1)" ng-cloak>
 
                         <div class="row">
                             <div class="col-sm-10">
@@ -162,7 +162,7 @@
 
                     </div>
 
-                    <div class="group" ng-show="isTabSelected(2)">
+                    <div class="group" ng-show="isTabSelected(2)" ng-cloak>
 
                         <div class="row">
                             <div class="col-sm-8">
@@ -170,7 +170,7 @@
                                     <div class="gallery-description" id="g-{{item.name}}">
                                         <h1>{{item.name}}</h1>
                                         <p>{{item.description}}</p>
-                                        <a class="button" href="{{item.githubURL}}" ng-show="item.github" target="_blank">View on Github</a>
+                                        <a class="button" href="{{item.githubURL}}" ng-show="item.github" target="_blank" ng-cloak>View on Github</a>
                                     </div>
                                     <div class="gallery-content">
                                         <div class="row">
@@ -197,7 +197,7 @@
 
                     </div>
 
-                    <div class="group" ng-show="isTabSelected(3)">
+                    <div class="group" ng-show="isTabSelected(3)" ng-cloak>
 
                         <div class="row">
                             <div class="col-sm-6">
