--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <script src="resources/bower_components/angular/angular.min.js"></script>
         <script src="resources/bower_components/typed.js/dist/typed.min.js"></script>
         <script src="resources/bower_components/aws-sdk/dist/aws-sdk.min.js"></script>
+        <script src="resources/bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="resources/javascript/app.js"></script>
     </head>
     <body>
@@ -166,12 +167,14 @@
 
                         <div class="row">
                             <div class="col-sm-8">
+
                                 <div class="gallery-row" ng-repeat="item in galleries">
                                     <div class="gallery-description" id="g-{{item.name}}">
                                         <h1>{{item.name}}</h1>
                                         <p>{{item.description}}</p>
                                         <a class="button" href="{{item.githubURL}}" ng-show="item.github" target="_blank" ng-cloak>View on Github</a>
                                     </div>
+
                                     <div class="gallery-content">
                                         <div class="row">
                                             <div class="col-sm-6" ng-repeat="gallery in item.objects">
